--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.9.0",
     "next": "^14.2.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,18 +24,20 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.16.10",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
-    "postcss": "^8.4.34",
+    "eslint-plugin-css-modules": "^2.12.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "postcss": "^8.4.47",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.10.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
